Fixes to UI bugs on mobile and edge case devices

--- a/components/sections/programs/pcard/style.css
+++ b/components/sections/programs/pcard/style.css
@@ -1,6 +1,7 @@
 .rectangle {
   width: 95%;
   min-height: 40vh;
+  max-height: 70vh;
   stroke: white;
   background-color: transparent;
   outline: 4px solid rgb(236, 236, 236);
